--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -166,7 +166,7 @@
           style="display: inline; margin-left:10px">
 
       <button type="submit" 
-              ng-click="change(slot)" 
+              ng-click="change(original, slot)" 
               class="btn btn-success">Change</button>
 
       <button type="submit" 
