--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -1,9 +1,18 @@
-<h2>Planboard</h2>
+
+<div style="overflow:hidden;">
+
+  <h2 class="pull-left">Planboard</h2>
+
+  <div class="pull-right" style="margin-top: 35px;">
+  {{range.from}} - {{range.till}}
+  </div>
+
+</div>
             
-<!--             <div id="periodrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; margin-right:10px">
-                <i class="icon-calendar icon-large"></i>
-                <span>November 1, 2012 - November 30, 2012</span> <b class="caret" style="margin-top: 8px"></b>
-            </div> -->
+<!--<div id="periodrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; margin-right:10px">
+    <i class="icon-calendar icon-large"></i>
+    <span>November 1, 2012 - November 30, 2012</span> <b class="caret" style="margin-top: 8px"></b>
+</div> -->
 
 <hr>
 
