--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -9,3 +9,4 @@
 @import "custom"; // Import custom styles
 @import "angular"; // Fix Angular style issues
 @import "timeline"; // Fix Angular style issues
+@import "notifier"; // Fix Angular style issues
