--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,3 +1,68 @@
-<h2>Profile</h2>
+<h2>Profile: {{resources.name}}</h2>
 <hr>
-<p>User profile information.</p>
+
+<form class="form-horizontal">
+
+  <div class="control-group">
+    <label class="control-label">Name</label>
+    <div class="controls">
+      <input  type="text" 
+              ng-model="resources.name"
+              value="{{resources.name}}">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label">Email</label>
+    <div class="controls">
+      <input  type="text" 
+              ng-model="resources.EmailAddress"
+              value="{{resources.EmailAddress}}">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label">Phone</label>
+    <div class="controls">
+      <input  type="text" 
+              ng-model="resources.PhoneAddress"
+              value="{{resources.PhoneAddress}}">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label">Address</label>
+    <div class="controls">
+      <input  type="text" 
+              ng-model="resources.PostAddress"
+              value="{{resources.PostAddress}}">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label">Postcode</label>
+    <div class="controls">
+      <input  type="text" 
+              ng-model="resources.PostZip"
+              value="{{resources.PostZip}}">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label">City</label>
+    <div class="controls">
+      <input  type="text" 
+              ng-model="resources.PostCity"
+              value="{{resources.PostCity}}">
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="controls">
+      <button   type="submit" 
+                class="btn btn-success"
+                ng-click="save(resources)">Save</button>
+    </div>
+  </div>
+
+</form>
