--- a/partials/groups.html
+++ b/partials/groups.html
@@ -1,3 +1,43 @@
+<script type="text/javascript">
+  $('document').ready(function()
+  {
+    $('.tabs-left .tab-content').css({ height: $('.tabs-left .nav-tabs').height() - 24 });
+  })
+</script>
+
 <h2>Groups</h2>
 <hr>
-<p>Groups list and members</p>
+
+<p>Groups toolbar menu</p>
+<hr>
+
+<div class="tabbable tabs-left">
+
+  <ul class="nav nav-tabs" style="margin-right: 0;">
+    <li class="active"><a href="#lA" data-toggle="tab">Section 1</a></li>
+    <li class=""><a href="#lB" data-toggle="tab">Section 2</a></li>
+    <li class=""><a href="#lC" data-toggle="tab">Section 3</a></li>
+  </ul>
+
+  <div 	class="tab-content" 
+  			style="	background-color: white;
+  							border-right: 1px solid #ddd; 
+  							border-top: 1px solid #ddd;
+  							border-bottom: 1px solid #ddd;
+  							padding:10px;">
+
+    <div class="tab-pane active" id="lA">
+      <p>I'm in Section A.</p>
+    </div>
+
+    <div class="tab-pane" id="lB">
+      <p>Howdy, I'm in Section B.</p>
+    </div>
+
+    <div class="tab-pane" id="lC">
+      <p>What up girl, this is Section C.</p>
+    </div>
+
+  </div>
+
+</div>
