improved groups and users

--- a/partials/profile-edit.html
+++ b/partials/profile-edit.html
@@ -3,9 +3,9 @@
 
 <div class="btn-group">
   <a  class="btn"
-      href="#profile/view/{{user.id}}"><i class="icon-user"></i> View profile</a>
+      href="#profile/{{user.id}}/view"><i class="icon-user"></i> View profile</a>
   <a  class="btn"
-      href="#profile/password/{{user.id}}"><i class="icon-lock"></i> Change password</a>
+      href="#profile/{{user.id}}/password"><i class="icon-lock"></i> Change password</a>
 </div>
 
 <hr>
