--- a/partials/groups-view.html
+++ b/partials/groups-view.html
@@ -20,35 +20,14 @@
   	<div class="tabbable tabs-left">
 		  <ul class="nav nav-tabs">
 				<li ng-repeat="group in groups">
-					<a href="#groups/{{group.uuid}}/members">{{group.name}}</a>
+					<a href="#groups/{{group.uuid}}/view">{{group.name}}</a>
 				</li>
 		  </ul>
 		</div>
   </div>
 
   <div class="span10">
-
-  	<!-- <p>Please select a group.</p> -->
-
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th>Role</th>
-          <th>Email</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr ng-repeat="member in members">
-          <td>{{index}}</td>
-          <td>{{member.name}}</td>
-          <td>{{member.role}}</td>
-          <td>{{member.email}}</td>
-        </tr>
-      </tbody>
-    </table>
-
+  	<p>Please select a group.</p>
   </div>
 
-</div>
+</div
