--- a/partials/profile-password.html
+++ b/partials/profile-password.html
@@ -3,9 +3,9 @@
 
 <div class="btn-group">
   <a  class="btn"
-      href="#profile/view/{{user.id}}"><i class="icon-user"></i> View profile</a>
+      href="#profile/{{user.id}}/view"><i class="icon-user"></i> View profile</a>
   <a  class="btn"
-      href="#profile/edit/{{user.id}}"><i class="icon-cog"></i> Edit profile</a>
+      href="#profile/{{user.id}}/edit"><i class="icon-cog"></i> Edit profile</a>
 </div>
 
 <hr>
