--- a/partials/profile.html
+++ b/partials/profile.html
@@ -3,9 +3,9 @@
 
 <div class="btn-group">
   <a  class="btn"
-      href="#profile/edit/{{user.id}}"><i class="icon-cog"></i> Edit profile</a>
+      href="#profile/{{user.id}}/edit"><i class="icon-cog"></i> Edit profile</a>
   <a  class="btn"
-      href="#profile/password/{{user.id}}"><i class="icon-lock"></i> Change password</a>
+      href="#profile/{{user.id}}/password"><i class="icon-lock"></i> Change password</a>
 </div>
 
 <hr>
