working login & browsehappy & knrm accounts & md5 service & session service

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -10,3 +10,4 @@
 @import "angular"; // Fix Angular style issues
 @import "timeline"; // Fix Angular style issues
 @import "notifier"; // Fix Angular style issues
+@import "browse-happy"; // Fix Angular style issues
