work on progress on login&logout

--- a/partials/login.html
+++ b/partials/login.html
@@ -1,13 +1,12 @@
-<!--
-<div id="preloader" class="span3 well">
+<div id="preloader">
   <h2>Setting up the application</h2>
-  <br>
-  <div class="progress">
+  <hr>
+
+  <div class="progress" class="span3">
     <div class="bar"></div>
   </div>
   <span></span>
 </div>
--->
 
   
 <div id="loginForm">
@@ -15,14 +14,12 @@
   <h2>Login</h2>
   <hr>
 
-  <form  class="span3" 
-         ng-submit="login()">
+  <form class="span3" ng-submit="login()">
 
-    <!--
     <div id="alertDiv" class="alert alert-error">
-      <button id="alertClose" class="close" type="button" onclick="$('#alertDiv').hide()">×</button><span id="alertMessage"></span>
+      <button id="alertClose" class="close" type="button" onclick="$('#alertDiv').hide()">×</button>
+      <span id="alertMessage"></span>
     </div>
-    -->
 
     <div class="control-group">
       <label for="loginUsername" class="control-label">Username</label>
