--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -10,3 +10,26 @@ hr {
 	border-top-color: #ccc;
 	border-bottom-color: #fff;
 }
+
+
+
+#menu li a span.badge {
+	padding-top: 3px;
+	margin-left: 3px;
+}
+
+
+#preloader {
+	display: none;
+	
+}
+
+
+#loginForm {
+	margin: 0;
+}
+
+
+#alertDiv {
+	display: none;
+}
