--- a/partials/messages.html
+++ b/partials/messages.html
@@ -1,3 +1,104 @@
 <h2>Messages</h2>
+
 <hr>
-<p>Message inboxes.</p>
+
+<div  class="btn-group" 
+      style="margin-left: 15px" 
+      bs-buttons-checkbox="" 
+      data-toggle="buttons-radio">
+
+  <button type="button" 
+          class="btn" 
+          ng-model="boxes.inbox" 
+          ng-click="boxer('inbox')"
+          bs-button="">Inbox</button>
+  <button type="button" 
+          class="btn" 
+          ng-model="boxes.outbox" 
+          ng-click="boxer('outbox')"  
+          bs-button="">Outbox</button>
+
+  <button type="button" 
+          class="btn" 
+          ng-model="boxes.trash" 
+          ng-click="boxer('trash')"
+          bs-button="">Trash</button>
+</div>
+
+
+
+<div class="btn-group">
+  <button class="btn dropdown-toggle" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Date</a></li>
+    <li><a href="#">Name</a></li>
+    <li><a href="#">Subject</a></li>
+    <li class="divider"></li>
+    <li><a href="#">Ascending</a></li>
+    <li><a href="#">Descending</a></li>
+  </ul>
+</div>
+
+
+<div class="btn-group pull-right">
+  <button type="submit" 
+          ng-click="" 
+          class="btn btn-success">Compose a message</button>
+</div>
+
+
+<hr>
+
+<div class="tabbable tabs-left">
+
+  <ul class="nav nav-tabs" style="width: 210px">
+    <li ng-repeat="message in messages" 
+    		class="{{($index == 0) && 'active'}}">
+
+    	<a href="#msg-{{message.uuid}}" data-toggle="tab">
+    		<strong>{{message.sender}}</strong><br>
+    		{{message.subject}}<br>
+    		{{message.creationTime}}
+    	</a>
+    </li>
+  </ul>
+
+  <div class="tab-content">
+    <div 	ng-repeat="message in messages"
+    			class="{{($index == 0) && 'tab-pane active' || 'tab-pane'}}"
+    			id="msg-{{message.uuid}}">
+
+			<div class="btn-group pull-right">
+			  <button type="submit" 
+			          ng-click="" 
+			          class="btn">Reply</button>
+			  <button type="submit" 
+			          ng-click="" 
+			          class="btn btn-danger">Delete</button>
+			</div>
+
+      <dl>
+			  <dt>Sender</dt>
+			  	<dd>{{message.sender}}</dd>
+			  <dt>Receiver</dt>
+			  	<dd>{{message.receiver}}</dd>
+			  <dt>Date</dt>
+			  	<dd>{{message.datetime}}</dd>
+			  <dt>Module</dt>
+			  	<dd>{{message.module}}</dd>
+			  <dt>Priority</dt>
+			  	<dd>{{message.priority}}</dd>
+			  <dt>Question Text</dt>
+			  	<dd>{{message.question_text}}</dd>
+			  <dt>State</dt>
+			  	<dd>{{message.state}}</dd>
+			  <dt>Subject</dt>
+			  	<dd>{{message.subject}}</dd>
+			  <dt>Type</dt>
+			  	<dd>{{message.type}}</dd>
+			</dl>
+    
+    </div>
+  </div>
+
+</div>
