unique members after querying groups and members

--- a/partials/messages.html
+++ b/partials/messages.html
@@ -73,7 +73,7 @@
 			          ng-click="" 
 			          class="btn">Reply</button>
 			  <button type="submit" 
-			          ng-click="" 
+			          ng-click="delete(message.uuid)" 
 			          class="btn btn-danger">Delete</button>
 			</div>
 
