tabs for planboard

--- a/partials/groups.html
+++ b/partials/groups.html
@@ -50,6 +50,11 @@
                   ng-click="delete(message.uuid)" 
                   class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete Group</button>
         </div>
+
+        <button type="button" 
+                ng-click="" 
+                style="margin-right: 15px"
+                class="btn pull-right"><i class="icon-plus"></i> Add Members</button>
       </div>
 
       <hr>
