--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -240,7 +240,40 @@
   </form>
 </div>
 
-<div id="myTimeline"></div>
+
+<div class="tabbable tabs-left">
+
+  <ul class="nav nav-tabs"
+      style="width: 100px;
+              margin-right: -1px">
+    <li class="active">
+      <a href="#timelineTab" 
+          data-toggle="tab"
+          ng-click="fixTabHeight('timelineTab')">Timeline</a>
+    </li>
+    <li>
+      <a href="#statisticsTab" 
+          data-toggle="tab"
+          ng-click="fixTabHeight('statisticsTab')">Statistics</a>
+    </li>
+  </ul>
+
+  <div class="tab-content"
+        style="background-color: white; 
+                border: 1px solid #ddd; 
+                padding: 20px;">
+
+    <div class="tab-pane active" id="timelineTab">
+      <div id="myTimeline"></div>
+    </div>
+
+    <div class="tab-pane" id="statisticsTab">
+      <p>Statistics content</p>
+    </div>
+
+  </div>
+</div>
+
 
 
 
