--- a/partials/groups.html
+++ b/partials/groups.html
@@ -99,7 +99,7 @@
                   ng-click="" 
                   class="btn"><i class="icon-edit"></i> Edit Group</button>
           <button type="button" 
-                  ng-click="delete(message.uuid)" 
+                  ng-click="deleteGroup(group.uuid)" 
                   class="btn btn-danger"><i class="icon-trash icon-white"></i> Delete Group</button>
         </div>
 
