--- a/partials/groups.html
+++ b/partials/groups.html
@@ -29,30 +29,36 @@
 
   <!-- Add Group -->
   <div class="btn-group"
-        ng-hide="addGroupView">
+        ng-hide="(groupFormView.add || groupFormView.edit)">
 
     <button class="btn"
-            ng-click="addGroupView=true"><i class="icon-plus"></i> New group</button>
+            ng-click="groupFormView.add=true"><i class="icon-plus"></i> New group</button>
   </div>
   <!-- End Add Group -->
 
   <!-- Group Add / Edit Form -->
   <form class="form-inline pull-left" 
         style="display: inline;" 
-        ng-show="addGroupView"
-        ng-submit="groupSubmit(group)">
+        ng-show="(groupFormView.add || groupFormView.edit)"
+        ng-submit="groupSubmit(groupForm)">
 
-    <h4 style="display: inline;">Add Group</h4>
+    <h4 style="display: inline;">
+      <span ng-show="groupFormView.add">Add Group</span>
+      <span ng-show="groupFormView.edit">Edit Group</span>
+    </h4>
 
     <input type="text" 
             class="span2"
-            ng-model="group.name">
+            ng-model="groupForm.name">
 
-    <button type="submit" class="btn btn-success"><i class="icon-plus icon-white"></i> Add group</button>
+    <button type="submit" class="btn btn-success">
+      <span ng-show="groupFormView.add"><i class="icon-plus icon-white"></i> Add group</span>
+      <span ng-show="groupFormView.edit"><i class="icon-edit icon-white"></i> Save group</span>
+    </button>
 
     <button type="button" 
             class="btn"
-            ng-click="addGroupView=false">Cancel</button>
+            ng-click="groupFormView=false">Cancel</button>
 
   </form>
   <!-- Group Add / Edit Form -->
@@ -96,7 +102,7 @@
 
         <div class="btn-group pull-right">
           <button type="button" 
-                  ng-click="" 
+                  ng-click="editGroup(group)" 
                   class="btn"><i class="icon-edit"></i> Edit Group</button>
           <button type="button" 
                   ng-click="deleteGroup(group.uuid)" 
