--- a/partials/groups.html
+++ b/partials/groups.html
@@ -143,7 +143,7 @@
                 <a href="#/profile/{{member.uuid}}/edit" 
                   class="btn btn-mini"><i class="icon-edit"></i> Edit</a>
                 <button type="submit" 
-                        ng-click="removeMember(member.uuid)" 
+                        ng-click="removeMember(member, group)" 
                         class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i> Remove</button>
               </td>
             </tr>
