--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -1,10 +1,93 @@
 @charset "UTF-8";
 
+      /* Sticky footer styles
+      -------------------------------------------------- */
+
+
+
+
+      /* Custom page CSS
+      -------------------------------------------------- */
+      /* Not required for template or sticky footer method. */
+
+      // .container {
+      //   width: auto;
+      //   max-width: 680px;
+      // }
+      // .container .credit {
+      //   margin: 20px 0;
+      // }
+
+
+
+html,
 body {
-  padding-top: 60px;
-  padding-bottom: 40px;
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
+}
+
+body {
   background-color: #efefef;
 }
+
+
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by it's height */
+  margin: 0 auto -80px;
+
+
+  //padding-top: 60px;
+  //padding-bottom: 40px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+footer {
+  height: 80px;
+}
+
+footer {
+  //background-color: #f5f5f5;
+  background-color: #dcdcdc;
+  width: auto;
+  padding: 0 30px;
+  border-top: 1px solid #bbbbbb;  
+}
+
+footer .footcon {
+	padding-top: 15px;
+	padding-bottom: 10px;
+}
+
+
+.content {
+  padding: 30px;
+  padding-top: 60px;
+}
+
+.navbar .container {
+	padding-left: 30px;
+	padding-right: 30px;
+	margin-left: 0;
+	margin-right: 0;
+}
+
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+  footer {
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 
 hr {
 	border-top-color: #ccc;
