--- a/partials/groups.html
+++ b/partials/groups.html
@@ -109,7 +109,7 @@
       <div style="overflow: hidden; height: 35px">
         <h3 style="margin-top: 0;" class="pull-left">{{group.name}}</h3>
 
-        <div class="btn-group pull-right">
+        <div class="pull-right">
           <button type="button" 
                   ng-click="editGroup(group)" 
                   class="btn btn-warning"><i class="icon-edit icon-white"></i> Edit Group</button>
@@ -155,11 +155,13 @@
               <td>{{member.resources.role|translateRole}}</td>
               <td>{{member.resources.PhoneAddress}}</td>
               <td>
-                <a href="#/profile/{{member.uuid}}/edit" 
-                  class="btn btn-warning btn-mini"><i class="icon-edit icon-white"></i> Edit</a>
-                <button type="submit" 
-                        ng-click="removeMember(member.uuid, group.uuid)" 
-                        class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i> Remove</button>
+                <div class="pull-right">
+                  <a href="#/profile/{{member.uuid}}/edit" 
+                    class="btn btn-warning btn-mini"><i class="icon-edit icon-white"></i> Edit</a>
+                  <button type="submit" 
+                          ng-click="removeMember(member.uuid, group.uuid)" 
+                          class="btn btn-danger btn-mini"><i class="icon-trash icon-white"></i> Remove</button>
+                </div>
               </td>
             </tr>
 
