--- a/partials/messages.html
+++ b/partials/messages.html
@@ -2,59 +2,88 @@
 
 <hr>
 
-<div  class="btn-group" 
-      style="margin-left: 15px" 
-      bs-buttons-checkbox="" 
-      data-toggle="buttons-radio">
 
-  <button type="button" 
-          class="btn" 
-          ng-model="boxes.inbox" 
-          ng-click="boxer('inbox')"
-          bs-button="">Inbox</button>
-  <button type="button" 
-          class="btn" 
-          ng-model="boxes.outbox" 
-          ng-click="boxer('outbox')"  
-          bs-button="">Outbox</button>
 
-  <button type="button" 
-          class="btn" 
-          ng-model="boxes.trash" 
-          ng-click="boxer('trash')"
-          bs-button="">Trash</button>
+<!-- Messages toolbar -->
+<div class="row" style="padding-left: 30px;">
+  <div  class="btn-group" 
+        style="margin-left: 15px" 
+        bs-buttons-checkbox="" 
+        data-toggle="buttons-radio">
+
+    <button type="button" 
+            class="btn" 
+            ng-model="boxes.inbox" 
+            ng-click="boxer('inbox')"
+            bs-button="">Inbox</button>
+    <button type="button" 
+            class="btn" 
+            ng-model="boxes.outbox" 
+            ng-click="boxer('outbox')"  
+            bs-button="">Outbox</button>
+
+    <button type="button" 
+            class="btn" 
+            ng-model="boxes.trash" 
+            ng-click="boxer('trash')"
+            bs-button="">Trash</button>
+  </div>
+
+
+
+  <div class="btn-group">
+    <button class="btn dropdown-toggle" data-toggle="dropdown">Sort by <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">Date</a></li>
+      <li><a href="#">Name</a></li>
+      <li><a href="#">Subject</a></li>
+      <li class="divider"></li>
+      <li><a href="#">Ascending</a></li>
+      <li><a href="#">Descending</a></li>
+    </ul>
+  </div>
+
+
+  <div class="btn-group pull-right">
+    <button type="submit" 
+            ng-click="composeMessage()" 
+            ng-hide="composeView"
+            class="btn btn-success">Compose a message</button>
+  </div>
+
+
+  <hr>
 </div>
+<!-- end of messages toolbar -->
 
 
 
-<div class="btn-group">
-  <button class="btn dropdown-toggle" data-toggle="dropdown">Sort by <span class="caret"></span></button>
-  <ul class="dropdown-menu">
-    <li><a href="#">Date</a></li>
-    <li><a href="#">Name</a></li>
-    <li><a href="#">Subject</a></li>
-    <li class="divider"></li>
-    <li><a href="#">Ascending</a></li>
-    <li><a href="#">Descending</a></li>
-  </ul>
-</div>
 
 
-<div class="btn-group pull-right">
-  <button type="submit" 
-          ng-click="composeMessage()" 
-          ng-hide="composeView"
-          class="btn btn-success">Compose a message</button>
-</div>
 
 
-<hr>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- messages list -->
 <div class="tabbable tabs-left"
       ng-hide="composeView">
 
   <ul class="nav nav-tabs" 
       style="width: 210px;
+              height: 600px;
+              overflow: hidden;
               margin-right: -1px">
     <li ng-repeat="message in messages" 
     		class="{{($index == 0) && 'active'}}">
@@ -72,7 +101,8 @@
   <div class="tab-content"
         style="background-color: white; 
                 border: 1px solid #ddd; 
-                padding: 20px;">
+                padding: 20px;
+                height: 600px">
 
     <div 	ng-repeat="message in messages"
     			class="{{($index == 0) && 'tab-pane active' || 'tab-pane'}}"
@@ -118,7 +148,14 @@
   </div>
 
 </div>
+<!-- end messages list -->
 
+
+
+
+
+
+<!-- Compose view -->
 <div class=""
       style="background-color: white; 
                 border: 1px solid #ddd; 
@@ -167,7 +204,7 @@
                 ng-model="message.receivers" 
                 ng-options="receiver.name group by receiver.group for receiver in receviersList">
         </select>
-        <!-- <p ng-repeat="receiver in message.receivers"><strong>{{receiver.id}}</strong></p> -->
+        <p ng-repeat="receiver in message.receivers"><strong>{{receiver.id}}</strong></p>
       </div>
 
       <div class="control-group">
@@ -201,6 +238,7 @@
   </form>
 
 </div>
+<!-- end compose view -->
 
 
 
@@ -208,6 +246,70 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- New messages view 
+<div class="row" class="messagesView"
+      style="margin-left: 0;
+              background-color: white; 
+              border: 1px solid #ddd; 
+              min-height: 600px;">
+  
+
+  <div style="border-width: 250px;
+              height: 600px;
+              width: 20%;
+              border-right: 1px solid #ddd;
+              float: left;
+              overflow: auto">
+
+    <ul style="list-style: none; margin: 0">
+
+      <li ng-repeat="message in messages" 
+          style="padding: 10px; border-bottom: 1px solid #ddd; cursor: pointer;">
+
+        <a href="#msg-{{message.uuid}}" 
+            data-toggle="tab"
+            ng-click="fixTabHeight(message.uuid)">
+          <strong>{{message.sender}}</strong><br>
+          {{message.subject}}<br>
+          {{message.creationTime}}
+        </a>
+
+      </li>
+
+    </ul>
+
+  </div>
+
+  <div style="float: left;
+              width: 79%;">
+
+    <div style="padding:20px">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </div>
+
+  </div>
+
+
+</div>
+
+-->
 
 
 
