dateranger added, not fully functional

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -6,6 +6,7 @@
 
 @import "bootstrap-datepicker"; // Import custom styles
 @import "bootstrap-timepicker"; // Import custom styles
+@import "daterangepicker"; // Import custom styles
 @import "custom"; // Import custom styles
 @import "angular"; // Fix Angular style issues
 @import "timeline"; // Fix Angular style issues
