--- a/partials/planboard.html
+++ b/partials/planboard.html
@@ -1,107 +1,109 @@
-
+page header -->
 <div style="overflow:hidden;">
-
   <h2 class="pull-left">Planboard</h2>
-
   <div class="pull-right" style="margin-top: 35px;">
   {{range.from}} - {{range.till}}
   </div>
-
 </div>
-            
-<!--<div id="periodrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; margin-right:10px">
-    <i class="icon-calendar icon-large"></i>
-    <span>November 1, 2012 - November 30, 2012</span> <b class="caret" style="margin-top: 8px"></b>
-</div> -->
+<!-- end page header -->
 
 <hr>
 
 
+<!-- timeline controls -->
+<div class="row" style="padding-left: 30px; overflow: hidden">
+  
+
+  <!-- core timeline controls -->
+  <div class="pull-left">
 
 
+    <script type="text/javascript">
+      $(function() {
+        // Set the default dates
+        var startDate = Date.create().addDays(-6),  // 7 days ago
+            endDate   = Date.create();              // today
+        var range = $('#range');
+        // Show the dates in the range input
+        range.val(startDate.format('{MM}-{dd}-{yyyy}') + ' - ' + endDate.format('{MM}-{dd}-{yyyy}'));
+        range.daterangepicker({
+          startDate: startDate,
+          endDate: endDate,
+          ranges: {
+                  'Today': ['today', 'today'],
+                  'Yesterday': ['yesterday', 'yesterday'],
+                  'Last 7 Days': [Date.create().addDays(-6), 'today'],
+                  'Last 30 Days': [Date.create().addDays(-29), 'today']
+              }
+        },function(start, end)
+        {
+          //ajaxLoadChart(start, end);
+        });
+      });
+    </script>
+
+
+    <!-- dateranger -->
+    <div class="control-group input-append">
+      <span>Range</span>
+      <input type="text" name="range" id="range" />
+      <button type="button" 
+              class="btn"><i class="icon-calendar"></i></button>
+    </div>
+    <!-- end dateranger -->
+
+
+    <!-- zooms -->
+    <div class="btn-group">
+      <button type="button" class="btn"><i class="icon-zoom-in"></i></button>
+      <button type="button" class="btn"><i class="icon-zoom-out"></i></button> 
+    </div>
+    <!-- end zooms -->
+
+
+    <!-- before after -->
+    <div class="btn-group">
+      <button type="button" class="btn"><i class="icon-arrow-left"></i></button>
+      <button type="button" class="btn"><i class="icon-arrow-right"></i></button>  
+    </div>
+    <!-- end before after -->
+
+
+    <!-- view togglers -->
+    <div class="btn-group" bs-buttons-checkbox="" data-toggle="buttons-radio">
+      <button type="button" 
+              class="btn" 
+              ng-model="view.week" 
+              bs-button="">Week</button>
+      <button type="button" 
+              class="btn" 
+              ng-model="view.month" 
+              bs-button="">Month</button>
+    </div>
+    <!-- end view togglers -->
+
+
+  </div>
+  <!-- end core timeline controls -->
+
+
+</div>
+<!-- end timeline controls -->
+
+
+<hr>
+
+
+<!-- slot controls -->
 <div class="row" style="padding-left: 30px">
-
   <form class="form-inline well">
-    
-     
-    <div class="pull-left">
-
-      <div class="btn-group">
-        <button type="button" class="btn"><i class="icon-thumbs-down"></i> Undo</button>
-        <button type="button" class="btn"><i class="icon-thumbs-up"></i> Redo</button> 
-      </div>
-
-      <div class="btn-group">
-        <button type="button" class="btn"><i class="icon-zoom-in"></i></button>
-        <button type="button" class="btn"><i class="icon-zoom-out"></i></button> 
-      </div>
-
-      <div class="btn-group">
-        <button type="button" class="btn"><i class="icon-arrow-left"></i></button>
-        <button type="button" class="btn"><i class="icon-arrow-right"></i></button>  
-      </div>
 
 
-      <div class="btn-group" bs-buttons-checkbox="" data-toggle="buttons-radio">
-        <button type="button" 
-                class="btn" 
-                ng-model="view.week" 
-                bs-button="">Week</button>
-        <button type="button" 
-                class="btn" 
-                ng-model="view.month" 
-                bs-button="">Month</button>
-      </div>
-
-      <div class="btn-group">
-        <button class="btn dropdown-toggle" data-toggle="dropdown">Today <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Yesterday</a></li>
-          <li><a href="#">Tomorrow</a></li>
-          <li><a href="#">Next Week</a></li>
-          <li><a href="#">Next Month</a></li>
-        </ul>
-      </div>
-
-    </div>
-    
-    <div class="pull-right">
-      <span>Range From</span>
-
-      <div class="control-group input-append">
-        <input  name="date-from" 
-                class="input-small" 
-                type="text" 
-                ng-model="range.from" 
-                data-date-format="dd-mm-yyyy" 
-                bs-datepicker="">
-        <button type="button" 
-                class="btn" 
-                data-toggle="datepicker"><i class="icon-calendar"></i></button>
-      </div>
-      
-      <span style="margin-left: 15px">Range Till</span>
-
-      <div class="control-group input-append">
-        <input  name="date-till" 
-                class="input-small" 
-                type="text" 
-                ng-model="range.till" 
-                data-date-format="dd-mm-yyyy" 
-                bs-datepicker="">
-        <button type="button" 
-                class="btn" 
-                data-toggle="datepicker"><i class="icon-calendar"></i></button>
-      </div>
-
-    </div>
-
-  </form>
-
-  <form class="form-inline well">
-    
+    <!-- slot from -->
     <span>From</span>
+    
 
+    <!-- date -->
     <div class="control-group input-append">
       <input  name="date-from" 
               class="input-small" 
@@ -113,7 +115,10 @@
               class="btn" 
               data-toggle="datepicker"><i class="icon-calendar"></i></button>
     </div>
+    <!-- end date -->
 
+
+    <!-- time -->
     <div class="control-group" style="display: inline">
       <input  name="time-from" 
               type="text" 
@@ -122,9 +127,17 @@
               bs-timepicker>
       <i class="icon-time" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
     </div>
-    
+    <!-- end time -->
+
+
+    <!-- end slot from -->
+
+
+    <!-- slot till -->
     <span style="margin-left: 15px">Till</span>
 
+
+    <!-- date -->
     <div class="control-group input-append">
       <input  name="date-till" 
               class="input-small" 
@@ -136,7 +149,10 @@
               class="btn" 
               data-toggle="datepicker"><i class="icon-calendar"></i></button>
     </div>
+    <!-- end date -->
 
+
+    <!-- time -->
     <div class="control-group" style="display: inline">
       <input  name="time-till" 
               type="text" 
@@ -145,83 +161,84 @@
               bs-timepicker>
       <i class="icon-time" style="position: relative; margin: 2.5px 0 0 -24px;"></i>
     </div>
-    
+    <!-- end time -->
+
+
+    <!-- end slot till -->
+
+
+    <!-- slot state -->
     <span style="margin-left: 15px">State</span>
     <select ng-model="slot.state" 
             ng-options="option as value for (option, value) in states">
       <option value="">-- selecteer state --</option>
     </select>
+    <!-- end slot state -->
 
+
+    <!-- slot recursive -->
     <button type="button" 
             class="btn" 
             ng-model="slot.recursive" 
             style="margin-left: 15px" 
             bs-button>Wekelijks</button>
+    <!-- end slot recursive -->
 
-    <!-- <label for="reoccuring">Recursive</label>
-      <input  name="reoccuring" 
-              type="checkbox"
-              ng-model="slot.recursive">-->
 
+    <!-- slot actions -->
     <div  class="btn-group" 
           ng-hide="original" 
           style="display: inline; margin-left:10px">
-
       <button type="submit" 
               ng-click="add(slot)" 
               class="btn btn-success">Add</button>
-
     </div>
-
     <div  class="btn-group" 
           ng-show="original" 
           style="display: inline; margin-left:10px">
-
       <button type="submit" 
               ng-click="change(original, slot)" 
               class="btn btn-success">Change</button>
-
       <button type="submit" 
               ng-click="delete(slot.id)" 
               class="btn btn-danger">Delete</button>
-
     </div>
+    <!-- end slot actions -->
+
 
   </form>
-
 </div>
+<!-- end slot controls -->
 
 
-
-
-
+<!-- groups members timelines -->
 <div class="row" style="padding-left: 30px">
   <form class="form-inline well">
-    
-    <div class="pull-left">
-      <div class="btn-group">
-        <button class="btn dropdown-toggle" data-toggle="dropdown">Sort as <span class="caret"></span></button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Availability</a></li>
-          <li><a href="#">Name</a></li>
-        </ul>
-      </div>
-    </div>
-    
+
+
+    <!-- groups members controls -->
     <div class="pull-right">
-    
+
+
+      <!-- groups list -->
       <span style="margin-left: 15px">Group</span>
       <select ng-model="state__" 
               ng-options="option as value for (option, value) in groups">
         <option value="">-- selecteer group --</option>
       </select>
-    
+      <!-- end groups list -->
+
+
+      <!-- divisions list -->
       <span style="margin-left: 15px">Division</span>
       <select ng-model="state__" 
               ng-options="option as value for (option, value) in divisions">
         <option value="">-- selecteer division --</option>
       </select>
+      <!-- end divisions list -->
 
+
+      <!-- timeline layout manager -->
       <div  class="btn-group" 
             style="margin-left: 15px" 
             bs-buttons-checkbox="" 
@@ -234,26 +251,29 @@
                 class="btn" 
                 ng-model="checkbox.middle" 
                 bs-button="">Group Total</button>
-
-        <!-- REMOVE eventHAndlerTester -->
         <button type="button" 
                 class="btn" 
                 ng-model="checkbox.right" 
-                ng-click="eventHandlerTester('from view')"
+                ng-click=""
                 bs-button="">Team Members</button>
       </div>
+      <!-- end timeline layout manager -->
+
+
     </div>
+    <!--end groups members controls -->
+
 
   </form>
 </div>
+<!-- end groups members timelines -->
 
 
-
-
-
+<!-- timelines statistics -->
 <div class="row" style="padding-left: 30px">
   <div class="tabbable tabs-left">
-
+    
+    <!-- tabs -->
     <ul class="nav nav-tabs"
         style="width: 100px;
                 margin-right: -1px">
@@ -268,50 +288,36 @@
             ng-click="fixTabHeight('statisticsTab')">Statistics</a>
       </li>
     </ul>
+    <!-- end tabs -->
 
+    <!-- tabs content -->
     <div class="tab-content"
           style="background-color: white; 
                   border: 1px solid #ddd; 
                   padding: 20px;">
-
+      
+      <!-- timelines -->
       <div class="tab-pane active" id="timelineTab">
-        <div id="myTimeline"></div>
-      </div>
 
+
+        <!-- user timeline -->
+        <div id="myTimeline"></div>
+        <!-- end user timeline -->
+
+
+      </div>
+      <!-- end timelines -->
+
+      <!-- statistics -->
       <div class="tab-pane" id="statisticsTab">
         <p>Statistics content</p>
       </div>
+      <!-- end statistics -->
+
 
     </div>
+    <!-- end tabs content -->
+
   </div>
 </div>
-
-
-
-
-
-<!-- <div class="span12" style="margin:0">
-  <div class="well">
-    <h4>Cached</h4>
-    <ul style="font-size:11px">
-      <li>New Slots:
-        <ul>
-          <li ng-repeat="newSlot in newSlots">{{newSlot}}</li>
-        </ul>
-      </li>
-      <li>Changed Slots:
-        <ul>
-          <li ng-repeat="changedSlot in changedSlots">{{changedSlot}}</li>
-        </ul>
-      </li>
-      <li>Deleted Slots:
-        <ul>
-          <li ng-repeat="deletedSlot in deletedSlots">{{deletedSlot}}</li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</div> -->
-
-
-<!-- <button class="btn" ng-click="stopTimer()">Stop <span class="label label-success">{{counter}}</span></button> -->
+<!-- end timelines statistics
